k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: holiday-analyzer
  labels:
    name: holiday-analyzer
